syntax = "proto3";
package datamap;

service DataMap {
  rpc Get    (GetRequest)    returns (GetResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Drop   (DropRequest)   returns (DropResponse);
}

message GetRequest {
  string key = 1;
}

message CreateRequest {
  string key = 1;
  int64 value = 2;
}

message UpdateRequest {
  string key = 1;
  int64 value = 2;
}

message DropRequest {
  string key = 1;
}

message GetResponse {
  int64 value = 1;
}

message CreateResponse {
}

message UpdateResponse {
}

message DropResponse {
}
